--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,19 @@ body.light {
   color: #333;
 }
 
+body.light .card {
+  background-color: white;
+  color: #333;
+}
+
 /* Tema Escuro */
 body.dark {
   background-color: #1e1e1e;
+  color: #f2f2f2;
+}
+
+body.dark .card {
+  background-color: #2c2c2c;
   color: #f2f2f2;
 }
 
@@ -25,6 +35,8 @@ body.dark {
   padding: 10px 15px;
   font-size: 14px;
   cursor: pointer;
+  border-radius: 6px;
+  border: none;
 }
 
 /* Container principal */
@@ -39,6 +51,8 @@ body.dark {
   padding: 10px;
   margin: 20px 0;
   font-size: 16px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
 }
 
 /* Grid de cards */
@@ -51,7 +65,6 @@ body.dark {
 
 /* Card de animal */
 .card {
-  background-color: white;
   border: 1px solid #ccc;
   border-radius: 8px;
   overflow: hidden;
@@ -106,6 +119,8 @@ body.dark {
   font-size: 16px;
   padding: 8px 12px;
   cursor: pointer;
+  border-radius: 6px;
+  border: none;
 }
 
 /* Botão de aprender mais */
@@ -116,9 +131,10 @@ body.dark {
   background-color: #4caf50;
   color: white;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 6px;
   font-weight: bold;
   transition: background-color 0.2s;
+  border: none;
 }
 
 .learn-button:hover {
